# autodeletto

./: .gitignore  Cargo.toml
migrations/: 20210906145552_initial_migration.sql  20230803221735_admin_commands.sql
src/: main.rs  msgman.rs
src/commands/: configure.rs  getstatus.rs  killswitch.rs  mod.rs  remove.rs
