[package]
name = "autodeletto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
crossbeam-queue = "0.3.8"
lazy_static = "1.4.0"